--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-15 17:47:13
+lastsearch = 2024-07-16 00:36:55
 
 [demxanh.com]
 match = -135.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt đen 1.2x1.9m
 url = https://demre.com.vn/chieu-truc-hat-den-1-2x1-9m
 
 [shopee.vn]
-match = -182.4%%
-title = Chiếu trúc hạt, chiếu tre cao cấp nhiều kích thước nằm mát ...
-url = https://shopee.vn/Chiếu-trúc-hạt-chiếu-tre-cao-cấp-nhiều-kích-thước-nằm-mát-điều-hòa-Bếp-Bố-Yêu-i.1042428909.24053768852
+match = -135.3%%
+title = Chiếu Trúc hạt hồ lô đen Không Viền mắt nhỏ cao cấp ...
+url = https://shopee.vn/Chiếu-Trúc-hạt-hồ-lô-đen-Không-Viền-mắt-nhỏ-cao-cấp-thoáng-mát-BH-1-năm-(Ảnh-Thật)-i.8398725.5342652017
 
 [changagoidemdep.vn]
 match = 0.0%%
