--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-15 21:50:05
+lastsearch = 2024-07-16 00:37:29
 
 [shopee.vn]
-match = -60.0%%
-title = Màn chụp đỉnh vuông cao cấp,mùng tự bung đẹp tiện dụng ...
-url = https://shopee.vn/Màn-chụp-đỉnh-vuông-cao-cấp-mùng-tự-bung-đẹp-tiện-dụng-màn-ngủ-để-giường-thông-minh-mùng-mắt-nhỏ-chống-muỗi-có-viền-i.1102783201.17899383858
+match = -8.0%%
+title = Màn chụp Tự Bung Đỉnh Vuông Cao Cấp Hoàng Nhân ...
+url = https://shopee.vn/Màn-chụp-Tự-Bung-Đỉnh-Vuông-Cao-Cấp-Hoàng-Nhân-Màn-Rộng-Dãi-Mắt-Nhỏ-Chống-Muỗi-II-BẢO-HÀNH-1-năm-i.397469085.9220637014
 
 [munghoangphat.com]
 match = 48.0%%
@@ -22,9 +22,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [tiki.vn]
-match = -24.0%%
-title = Mua Màn ngủ tự bung đỉnh vuông gấp gọn, Mùng Chụp, ...
-url = https://tiki.vn/man-ngu-tu-bung-dinh-vuong-gap-gon-mung-chup-man-chup-tu-bung-man-ngu-chong-muoi-1m8-x-2m-de-dang-tien-loi-ben-dep-giao-hoa-van-ngau-nhien-p84658079.html?spid=84658085
+match = -8.0%%
+title = Màn đỉnh vuông hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [www.mantubung.com]
 match = -52.0%%
