--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-15 20:20:09
+lastsearch = 2024-07-16 00:37:18
 
 [shopee.vn]
-match = -8.3%%
-title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
+match = -70.8%%
+title = [ 🔥 Mẫu mới 🔥 ] Thảm lau chân cao cấp hàng loại 1 lông ...
+url = https://shopee.vn/-🔥-Mẫu-mới-🔥-Thảm-lau-chân-cao-cấp-hàng-loại-1-lông-cừu-siêu-mềm-mại-thấm-hút-tốt-40x60-GIÁ-SỐC--i.189593580.14011936530
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
+title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
 
 [tiki.vn]
 match = -54.2%%
@@ -37,9 +37,9 @@ title = Thảm Welcome (40Cmx60Cm) - NH
 url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 
 [www.lottemart.vn]
-match = -70.8%%
-title = Thảm Len Hình Thú 40x 60 cm (색상 랜덤배송)
-url = https://www.lottemart.vn/kr-ntg/product/tham-len-hinh-thu-40x-60-cm-random-color-delivery-8936186271359-p46359
+match = 45.8%%
+title = Thảm Len Hình Thú 40x60 cm
+url = https://www.lottemart.vn/en-vtu/product/tham-len-hinh-thu-40x-60-cm-random-color-delivery-8936186271359-p46359
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -82,8 +82,8 @@ title = Thảm chùi chân 40x60 cm màu đen hoan nghênh
 url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.html
 
 [sieuthinguyenkim.com]
-match = -29.2%%
-title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau ...
+match = -62.5%%
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
 url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
 [huyenikea.com]
