--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-16 00:20:17
+lastsearch = 2024-07-16 04:19:07
 
 [en.wikipedia.org]
-match = -16.7%%
-title = Kikuko Inoue
-url = https://en.wikipedia.org/wiki/Kikuko_Inoue
+match = -15.4%%
+title = Takeru Segawa
+url = https://en.wikipedia.org/wiki/Takeru_Segawa
 
 [kpop.fandom.com]
 match = -47.1%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = 17.6%%
-title = iKON - 'I'M OK' M/V
-url = https://www.youtube.com/watch?v=yqszm7AnX-4
+match = -88.2%%
+title = Don't Think Twice, It's Alright -- Lesson
+url = https://www.youtube.com/watch?v=NNVYwE-KGkQ
 
 [www.tiktok.com]
 match = 20.0%%
