--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-16 01:35:58
+lastsearch = 2024-07-16 04:21:15
 
 [vnexpress.net]
 match = -128.6%%
@@ -47,8 +47,8 @@ title = Côn Đảo khai mạc đường hoa, khu vui Xuân và ẩm thực ...
 url = https://www.baobariavungtau.com.vn/du-lich/202402/con-dao-khai-mac-duong-hoa-khu-vui-xuan-va-am-thuc-xuan-1003168/index.htm
 
 [www.etrip4u.com]
-match = -71.4%%
-title = Những địa điểm du lịch ở Vũng Tàu siêu đẹp nên biết
+match = -52.4%%
+title = Những địa điểm du lịch ở Vũng Tàu đẹp - Etrip4u
 url = https://www.etrip4u.com/du-lich/mach-ban-nhung-dia-diem-du-lich-o-vung-tau-sieu-dep
 
 [www.gt-rider.com]
