--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-16 00:46:08
+lastsearch = 2024-07-16 04:19:59
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -225.0%%
-title = GAM Esports LoL - GAM 0 - 2 TS Thất bại đầu tiên của mùa ...
-url = https://m.facebook.com/GAMeSportsVN/photos/gam-0-2-tsthất-bại-đầu-tiên-của-mùa-giảigamtime-riseasone-decadeofdominance/889965069836877/
+match = -68.8%%
+title = Peri Pool Arena Hà Nội added a...
+url = https://m.facebook.com/100094275258198/photos/340178325801340/
 
 [www.sjcallahabad.org]
 match = -212.5%%
