--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-07-15 23:50:04
+lastsearch = 2024-07-16 04:14:08
 
 [demxanh.com]
 match = -9.1%%
@@ -37,9 +37,9 @@ title = Review chiếu trúc hạt đen
 url = https://www.youtube.com/watch?v=XsFS_4Jr5lc
 
 [shopee.vn]
-match = -3.0%%
-title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m2
+match = 18.2%%
+title = Chiếu Trúc hạt hồ lô đen Không Viền mắt nhỏ cao cấp ...
+url = https://shopee.vn/Chiếu-Trúc-hạt-hồ-lô-đen-Không-Viền-mắt-nhỏ-cao-cấp-thoáng-mát-BH-1-năm-(Ảnh-Thật)-i.8398725.5342652017
 
 [chieutrucxinh.weebly.com]
 match = -9.1%%
@@ -62,9 +62,9 @@ title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [vongxepsaigon.vn]
-match = -30.3%%
-title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
+match = 15.2%%
+title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-80cm/
 
 [caicachhanhchinhhungyen.com.vn]
 match = 0.0%%
