--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-16 03:45:58
+lastsearch = 2024-07-16 04:18:58
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -57,9 +57,9 @@ title = Fair Housing Law – What is Required of Owner ...
 url = https://www.ochhoalaw.com/fair-housing-law-what-is-required-of-owner-associations/
 
 [idfpr.illinois.gov]
-match = 0.0%%
-title = 
-url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/faq/ccic-ombudsperson-faq-10-which-law-applies-to-my-association-12-20-2016.pdf
+match = -170.6%%
+title = Rights and Responsibilities of Association Board Members
+url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.leg.state.fl.us]
 match = -170.6%%
@@ -380,4 +380,9 @@ url = https://www.appliedmaterials.com/us/en.html
 match = 0.0%%
 title = 
 url = https://guides.sll.texas.gov/property-owners-associations/ccrs
+
+[www.jcs.mil]
+match = -111.8%%
+title = Official Website of the Joint Chiefs of Staff
+url = https://www.jcs.mil/
 
