--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-15 23:51:34
+lastsearch = 2024-07-16 04:15:21
 
 [www.bible.com]
-match = 5.9%%
-title = Matthew 20:22-28 NKJV
-url = https://www.bible.com/bible/114/MAT.20.22-28.NKJV
+match = -88.2%%
+title = LUKA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -17.6%%
-title = Doktrin na ol Kavanen 78
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
+match = -205.9%%
+title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
