--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-16 02:13:55
+lastsearch = 2024-07-16 04:14:40
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = thảm ghế 1m7rời
 url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 
 [www.facebook.com]
-match = -213.3%%
-title = Mai Ngô đến trễ 2 tiếng ở sơ khảo Hoa hậu Hòa bình ...
-url = https://www.facebook.com/photo.php?fbid=645364180290734&id=100044514726115&set=a.588659265961226&locale=vi_VN
+match = -220.0%%
+title = LIFE MENTOR - CHA MẸ DẪN LỐI | **KHÁM PHÁ GỐC RỄ CỦA ...
+url = https://www.facebook.com/groups/lifementor2021/posts/1856300418163208/
 
 [voz.vn]
 match = -233.3%%
@@ -27,8 +27,8 @@ title = Điện thoại sức mạnh khủng khiếp nhất thế giới - ROG .
 url = https://www.tiktok.com/@tuanngocday/video/7122416350638705946
 
 [www.reddit.com]
-match = -120.0%%
-title = Chiều cao 1m80 trên thế giới : r/vozforums
+match = -33.3%%
+title = Chiều cao 1m80 trên thế giới
 url = https://www.reddit.com/r/vozforums/comments/xcdoeo/chiều_cao_1m80_trên_thế_giới/
 
 [mysofa.vn]
