--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-16 00:44:48
+lastsearch = 2024-07-16 04:29:32
 
 [shopee.vn]
-match = -28.0%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -8.0%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [tiki.vn]
 match = -16.0%%
@@ -117,9 +117,9 @@ title = Ông Trump đã đi chơi golf chưa đầy 24 giờ sau khi bị ám ..
 url = https://trithucvn.co/the-gioi/ong-trump-da-di-choi-golf-chua-day-24-gio-sau-khi-bi-am-sat-hut.html
 
 [www.klook.com]
-match = -56.0%%
-title = 35 Địa Điểm Du Lịch Đài Loan Nổi Tiếng Cho Bạn Khám Phá
-url = https://www.klook.com/vi/blog/dia-diem-du-lich-dai-loan/
+match = -12.0%%
+title = 15 Món Đặc Sản Đài Loan Nhất Định Phải Thử
+url = https://www.klook.com/vi/blog/dac-san-dai-loan/
 
 [www.dkn.tv]
 match = -76.0%%
