--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-15 18:44:52
+lastsearch = 2024-07-16 04:34:33
 
 [www.tiktok.com]
 match = -40.0%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -111.8%%
-title = Newsletter - Page 50 - Google Books Result
-url = https://books.google.com/books?id=idV5Fy_yxFQC&pg=RA12-PA50&lpg=RA12-PA50&dq=man+in+hoa+dep+16&source=bl&ots=2KKHQVH8SU&sig=ACfU3U2N6CxRhTSTeasQONSQPr-J0QQgPw&hl=en&sa=X&ved=2ahUKEwjFi-GO_KiHAxWCMlkFHRlXC6UQ6AF6BAgXEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5wvIz81&sig=ACfU3U3gSVF09XfgRRRYyVXY2COkvbm1TQ&hl=en&sa=X&ved=2ahUKEwjgrP71_6mHAxVyz8kDHdQaDQsQ6AF6BAgqEAM
 
 [tax.vermont.gov]
 match = -29.4%%
