--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-07-16 03:47:59
+lastsearch = 2024-07-16 04:33:18
 
 [www.diepxuan.com]
-match = 20.8%%
-title = Thảm giường nỉ 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+match = 41.7%%
+title = Điệp Xuân Thảm giường nỉ 150x190
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.tripadvisor.com]
 match = -25.0%%
