--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-16 04:49:09
+lastsearch = 2024-07-16 05:14:21
 
 [shopee.vn]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -168.4%%
-title = Chiều nay em đi câu cá, con cua, nhạc thiếu nhi vui nhộn, quả ...
-url = https://www.youtube.com/watch?v=6ZKWF1hxUeE
+match = -94.7%%
+title = Tập Thể Dục Buổi Sáng ♫ Minh Vy - Kênh Thiếu Nhi
+url = https://www.youtube.com/watch?v=jpQ6lb2Y0N0
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -175,4 +175,9 @@ url = https://thsonhoa.bentre.edu.vn/en/trang-chu?p_auth=0JrGoQuy&p_p_id=Visit_c
 match = -84.2%%
 title = rua mat - Tin tức tức online 24h về rửa mặt
 url = https://zingnews.vn/rửa-mặt-tin-tuc/trang22.html?type=2
+
+[doanthanhnien.vn]
+match = -42.1%%
+title = Mùa hè bổ ích với thiếu nhi Hà Tĩnh
+url = https://doanthanhnien.vn/tin-tuc/doi-tntp-ho-chi-minh/mua-he-bo-ich-voi-thieu-nhi-ha-tinh
 
