--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-16 03:19:25
+lastsearch = 2024-07-16 05:12:48
 
 [demxanh.com]
 match = 3.4%%
@@ -12,9 +12,9 @@ title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
 url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [entershopping.vn]
-match = -13.8%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+match = 3.4%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [thegioichieutruc.com]
 match = -31.0%%
@@ -37,8 +37,8 @@ title = Chiếu điều hòa cao su non - Kho đệm
 url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.diepxuan.com]
-match = 58.6%%
-title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
+match = 65.5%%
+title = Điệp Xuân Chiếu điều hòa cao su 150x190
 url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 
 [russo.vn]
