--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-16 03:20:43
+lastsearch = 2024-07-16 06:29:33
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -156.2%%
-title = Nizu #3: Bạn bè - Page 14 - Google Books Result
-url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkMliit73&sig=ACfU3U2usR1JTKMyHtqtPi6hxdNUFzix6Q&hl=en&sa=X&ved=2ahUKEwiJqba176mHAxWpFjQIHTnPCZkQ6AF6BAgnEAM
+match = -87.5%%
+title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
+url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENPTZ30Yy&sig=ACfU3U0Qpcs67uc-KJOj6Ry-WtrBFejcEA&hl=en&sa=X&ved=2ahUKEwjRuZDQmaqHAxUZJEQIHWjwBngQ6AF6BAgVEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
