--- a/images/tui-warmdream-180x200x14/config.ini
+++ b/images/tui-warmdream-180x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x14.html
 lastopen = 2024-06-17 10:46:26
 
 [search]
-lastsearch = 2024-07-16 05:38:06
+lastsearch = 2024-07-16 06:35:47
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -45,4 +45,14 @@ url = https://expeditionportal.com/forum/threads/looking-for-a-new-family-tent-h
 match = -41.7%%
 title = Duvalay as replacement for upper mattress
 url = https://vwcaliforniaclub.com/threads/duvalay-as-replacement-for-upper-mattress.35988/
+
+[www.tui.co.uk]
+match = 0.0%%
+title = 
+url = https://www.tui.co.uk/flight/flying-with-us/our-fleet
+
+[htk684.com]
+match = -54.2%%
+title = tui warmdream 16 - Flying TUI Dreamliner - htk684.com
+url = https://htk684.com/products/lrrxzabx-255/
 
