--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-15 22:16:14
+lastsearch = 2024-07-16 06:47:42
 
 [www.youtube.com]
 match = -48.0%%
@@ -42,9 +42,9 @@ title = Đài Loan cảnh giác với 'làn sóng' thử tên lửa tại miền
 url = https://trithucvn.co/the-gioi/dai-loan-canh-giac-voi-lan-song-thu-ten-lua-tai-mien-bac-trung-quoc.html
 
 [books.google.com]
-match = -96.0%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=vqdQAQAAIAAJ&pg=RA6-PA12&lpg=RA6-PA12&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=KcLrG_AO67&sig=ACfU3U0ylcJFsFm3VrMb5v_-faWG2tq3Xw&hl=en&sa=X&ved=2ahUKEwjTuIr5mKiHAxWWlu4BHbQdBigQ6AF6BAgTEAM
+match = -116.0%%
+title = Trung Xô Mỹ Cuộc Đối Đầu Lịch Sử - Page 637 - Google Books Result
+url = https://books.google.com/books?id=xfvcEAAAQBAJ&pg=PA637&lpg=PA637&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=qWSTELi8Jv&sig=ACfU3U2Qm3bb7ror7elmdpeC0PgMFLRxyA&hl=en&sa=X&ved=2ahUKEwiL3JrXnaqHAxUDmO4BHRsJDf4Q6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
