--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-15 20:34:01
+lastsearch = 2024-07-16 06:48:49
 
 [www.diepxuan.com]
 match = -125.0%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -6.2%%
-title = Huda Beauty Lip Stain
-url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
+match = -156.2%%
+title = Gloss for life - #beautytok - #hudabeauty - #lip
+url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
 
 [archiveofourown.org]
 match = -137.5%%
@@ -120,4 +120,9 @@ url = https://www.lemon8-app.com/an_nie/7208139846819316225?region=vn
 match = -206.2%%
 title = christian dior perfumes antigos - list of dior fragrances
 url = https://www.innovatemenudesign.com/products/nwalliry-53/
+
+[htk684.com]
+match = -131.2%%
+title = tui warmdream 16 - Flying TUI Dreamliner - htk684.com
+url = https://htk684.com/products/lrrxzabx-255/
 
